[gd_scene load_steps=28 format=3 uid="uid://df1ppiot2rtv7"]

[ext_resource type="Script" path="res://DepositBox/DepositBox.gd" id="1_0j0xb"]
[ext_resource type="Texture2D" uid="uid://botuis6341apu" path="res://DepositBox/depositbox.png" id="2_cras7"]
[ext_resource type="Texture2D" uid="uid://dyafu62qfcp5u" path="res://DepositBox/depositbox_cursor.png" id="3_b2s07"]

[sub_resource type="Animation" id="Animation_joenf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_u1du0"]
resource_name = "blink"
length = 10.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 2, 1, 0]
}

[sub_resource type="Animation" id="Animation_5n88i"]
resource_name = "look"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [3, 5, 4]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_snc1n"]
_data = {
"RESET": SubResource("Animation_joenf"),
"blink": SubResource("Animation_u1du0"),
"look": SubResource("Animation_5n88i")
}

[sub_resource type="Animation" id="Animation_b103g"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite/Cursor:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite/Cursor:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_dpuhy"]
resource_name = "wrong_plant"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite/Cursor:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.45),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Color(1, 0, 0, 1), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite/Cursor:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-5, 0), Vector2(0, 0), Vector2(5, 0), Vector2(0, 0), Vector2(-5, 0), Vector2(0, 0), Vector2(5, 0), Vector2(0, 0)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite/Cursor")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.45),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"stop"
}, {
"args": [&"", 1.0, false],
"method": &"play"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rlaby"]
_data = {
"RESET": SubResource("Animation_b103g"),
"wrong_plant": SubResource("Animation_dpuhy")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_23psi"]
atlas = ExtResource("2_cras7")
region = Rect2(0, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_aw4md"]
atlas = ExtResource("2_cras7")
region = Rect2(96, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ns7gu"]
atlas = ExtResource("2_cras7")
region = Rect2(192, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kw0de"]
atlas = ExtResource("2_cras7")
region = Rect2(288, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yw4h8"]
atlas = ExtResource("2_cras7")
region = Rect2(0, 64, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tjaam"]
atlas = ExtResource("2_cras7")
region = Rect2(96, 64, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ivhiy"]
atlas = ExtResource("2_cras7")
region = Rect2(192, 64, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_haky0"]
atlas = ExtResource("2_cras7")
region = Rect2(288, 64, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_752mc"]
atlas = ExtResource("2_cras7")
region = Rect2(0, 128, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ifaym"]
atlas = ExtResource("2_cras7")
region = Rect2(96, 128, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fn5y1"]
atlas = ExtResource("2_cras7")
region = Rect2(192, 128, 96, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_ut0mn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_23psi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aw4md")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ns7gu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kw0de")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yw4h8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tjaam")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ivhiy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_haky0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_752mc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ifaym")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fn5y1")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_sbsic"]
atlas = ExtResource("3_b2s07")
region = Rect2(0, 0, 100, 68)

[sub_resource type="AtlasTexture" id="AtlasTexture_mx6p6"]
atlas = ExtResource("3_b2s07")
region = Rect2(100, 0, 100, 68)

[sub_resource type="AtlasTexture" id="AtlasTexture_s7lcj"]
atlas = ExtResource("3_b2s07")
region = Rect2(0, 68, 100, 68)

[sub_resource type="SpriteFrames" id="SpriteFrames_atghn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sbsic")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mx6p6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s7lcj")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ul5xc"]
size = Vector2(96, 64)

[node name="DepositBox" type="Area2D"]
collision_layer = 4
collision_mask = 0
script = ExtResource("1_0j0xb")
corrupted_points = 150

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_snc1n")
}

[node name="CursorAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_rlaby")
}

[node name="Sprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_ut0mn")

[node name="SignParsnip" type="Sprite2D" parent="Sprite"]
visible = false
position = Vector2(0, 16)
texture = ExtResource("2_cras7")
region_enabled = true
region_rect = Rect2(322, 156, 30, 36)

[node name="SignMelon" type="Sprite2D" parent="Sprite"]
visible = false
position = Vector2(0, 16)
texture = ExtResource("2_cras7")
region_enabled = true
region_rect = Rect2(34, 220, 30, 36)

[node name="SignTomato" type="Sprite2D" parent="Sprite"]
visible = false
position = Vector2(0, 16)
texture = ExtResource("2_cras7")
region_enabled = true
region_rect = Rect2(130, 220, 30, 36)

[node name="Cursor" type="AnimatedSprite2D" parent="Sprite"]
sprite_frames = SubResource("SpriteFrames_atghn")
autoplay = "default"
frame_progress = 0.152764

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("RectangleShape2D_ul5xc")
debug_color = Color(0.894118, 0.027451, 0.776471, 0.419608)

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
visible = false
shape = SubResource("RectangleShape2D_ul5xc")
debug_color = Color(0.894118, 0.027451, 0.776471, 0.419608)
